recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: not found: value step
current(step)
        ^